Expanded Cheat Menu:
Cleaned up Console>Examine.
and some code cleanup.

### Added:
- Game>Camera>Bird's Eye: How far up the camera can move.

### Fixed:
- Colour Modifier: All of type didn't work on new markers.

Lib:
- Shift-Esc will close an in-focus dialog.
- Hopefully fixed an issue with Change Object Colour.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001427,,
-302535920001428,,
-302535920001429,,
 302535920001430,,
 302535920001431,,
 302535920001432,,
@@ -126,7 +123,7 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000018,"Don't use the colour picker: Numbers range from -128 to 120.
 If you want shiny metal: use 120 for Metallic and -128 for Roughness.",
 302535920000019,"Single colour for object (this colour will interact with the other colours).
-If you want to change the colour of an object you can't with 1-4 (like drones).",
+If you want to change the colour of an object you can't with 1-4.",
 302535920000020,Colour is set on %s.,
 302535920000022,"If number is 8421504 then you probably can't change that colour.
 
@@ -250,7 +247,7 @@ Check the actual object/g_Classes.object for the correct value to use (Entity > 
 302535920001384,Get properties different from base/parent object?,
 302535920000067,Ged Inspect,
 302535920001075,Open this object in the Ged inspector.,
-302535920000066,<color 203 120 30>Off-Map Pos</color>,
+302535920000066,<color 203 120 30>Off-Map</color>,
 302535920000059,Destroy all objects in objlist!,
 302535920000057,Mark Object,
 302535920000058,Mark All Objects,
@@ -1263,6 +1260,8 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920001375,Bird's Eye,
+302535920001429,How far up the camera can move.,
 302535920001385,Use these lists to find the correct ids.,
 302535920001386,Can be changed after in %s>%s>%s.,
 302535920000061,Place Objects,
@@ -1404,6 +1403,8 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920001427,Pack Mod,
+302535920001428,Uploads as a packed mod (default for mod editor upload).,
 302535920001412,GUI Dock Side,
 302535920001413,Change which side (most) GUI menus are on.,
 302535920000321,Enable ToolTips,
@@ -1412,7 +1413,6 @@ Not noticeable unless using higher zoom.",
 302535920001388,"Concrete, metal deposits, not working, etc...",
 302535920000664,Clipboard,
 302535920000665,If uploading a new mod this copies steam_id to clipboard.,
-302535920001375,"<color 255 100 100>WARNING: Backup your first five workshop images, unless you use screenshot 1-5 in mod def, or in AppData/Mod Images/ModId_*.png/jpg.</color>",
 302535920001364,Don't be an asshole to %s... Always ask permission before using other people's hard work.,
 302535920001365,HPK files will be unpacked into AppData/Mods/ModSteamId,
 302535920001362,Extract HPKs,
