--- a/Mods ChoGGi/Disable Drone Maintenance/changes.txt
+++ b/Mods ChoGGi/Disable Drone Maintenance/changes.txt
@@ -1,13 +1,20 @@
+v0.8
+Issue with re-enabling main (thanks mk-fg).
+
 v0.7
 Library update.
 
 v0.6
 Library.
+
 v0.5
 Cleaning up code (ChoGGi's Library).
+
 v0.4
 Cleaning up code (ChoGGi's Library).
+
 v0.3
 Da Vinci
+
 v0.2
 Added a menu toggle for selected or all of type.
