--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001430,,
-302535920001431,,
 302535920001432,,
 302535920001433,,
 302535920001434,,
@@ -148,6 +146,8 @@ You can copy and paste numbers if you want.",
 302535920000733,Open a preset in the editor.,
 302535920001410,Toggle Visibility,
 302535920000735,Timer delay skipped,
+302535920001431,Kill this colonist!,
+302535920001430,Kill colonist,
 302535920000162,Need,
 302535920000083,<left_click> Activate,
 302535920000060,Instantly complete building without needing resources.,
