Expanded Cheat Menu:
Added the rest of the icons to examine tools.
Changed popup menus colours for examine to match cheats menu.
Cleaned up text for mod upload.

Dome Teleporters v0.3:
Build dist was no good for values under 100.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -258,7 +258,7 @@ Check the actual object/g_Classes.object for the correct value to use (Entity > 
 302535920000021,Mark object with green sphere and/or paint.,
 302535920001321,UI Click To Select,
 302535920001322,"Examine UI controls by clicking them.
-This dialog will freeze till you click something.",
+The screen will ""pause"" till you click something.",
 302535920000970,UI Flash,
 302535920000972,Flash visibility of the UI object being examined.,
 302535920001057,Data,
@@ -1421,7 +1421,6 @@ Not noticeable unless using higher zoom.",
 302535920001323,Show all the cheat menu items in a list dialog.,
 302535920001285,Opens in webbrowser.,
 302535920000244,Warning! This will hide everything. Remember the shortcut or have fun restarting.,
-302535920000051,Mod will not be packed in an hpk file like the Mod Editor does for uploading (but you can pack it manually: ModFolder/Pack/ModContent.hpk).,
 302535920001281,Information about your computer (as seen by SM).,
 302535920001282,Information about this saved game (mostly objects).,
 302535920000892,Screenshot,
@@ -1430,11 +1429,12 @@ Not noticeable unless using higher zoom.",
 302535920000236,Mod Editor,
 302535920001265,ModMessageLog,
 302535920001258,Copy Files,
+302535920000051,Mod will not be packed in an hpk archive.,
 302535920001259,"Copies all mod files to %sModUpload, uncheck to copy files manually.",
 302535920001260,Blank Mod,
 302535920001261,"Uploads a blank private mod to Steam Workshop, and prints Workshop id in log.",
 302535920001262,%sModUpload folder is empty and waiting for files.,
-302535920001263,"Mod author name is different from your name, do you have permission to upload this mod?",
+302535920001263,"%s is different from your name, do you have permission to upload it?",
 302535920001244,"Saves settings to file, and applies any changes.",
 302535920001245,Abort without touching anything.,
 302535920000466,"This will disable the cheats menu, cheats panel, and all hotkeys.
