--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -128,7 +128,7 @@ You can copy and paste numbers if you want.",
 302535920000029,Error: Cannot find any %s.,
 302535920000032,Select a resource to find,
 302535920001441,"<left_click> Activate, <right_click> Add/Remove Quickbar",
-302535920001439,"~obj, @func,@@type,$id, *r/*g for threads",
+302535920001439,"~obj, @func,@@type,$id, *r/*g/*m threads",
 302535920001440,"~obj opens object in examine dialog.
 ~!obj opens an objlist of attachments for object in examine.
 &handle examines object with that handle.
