Expanded Cheat Menu:
### Changed:
- EnumVars button to examine toolbar (only shows up when there's something to view).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001442,,
-302535920001443,,
-302535920001444,,
 302535920001445,,
 302535920001446,,
 302535920001447,,
@@ -233,6 +230,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows any errors from loading mods in console log.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001442,EnumVars,
+302535920001443,View output from EnumVars(obj).,
 302535920001424,"<left_click> Next, <right_click> Previous, <middle_click> Top",
 302535920001425,"<left_click> Toggle, <right_click> Set Delay",
 302535920001426,Various tools to use.,
@@ -310,6 +309,7 @@ Press Ctrl-Enter or Shift-Enter to execute code.",
 302535920000073,Execute code in text box (Ctrl-Enter or Shift-Enter will also work).,
 302535920000075,Insert Obj,
 302535920000076,At caret position inserts: ChoGGi.CurObj,
+302535920001444,"<left_click> Activate, <right_click> Alt Activate",
 302535920001371,"Double-click to apply and close list, double right-click to apply without closing list.",
 302535920001341,Double-click to apply without closing list.,
 302535920001167,Use Ctrl/Shift for multiple selection.,
