--- a/Mods ChoGGi/Fix Rocket Stuck/changes.txt
+++ b/Mods ChoGGi/Fix Rocket Stuck/changes.txt
@@ -1,3 +1,6 @@
+v1.1
+Now drops off fuel/rare metals into a res pile before fixing maintenance stuck rockets.
+
 v1.0
 Fix for officers returning from expedition.
 Better fix for maintenance stuck rockets.
