Expanded Cheat Menu:
### Changed:
- Moved Toggle Object Collision from Fixes to Debug.

### Fixed:
- v11.3 was allowing people to build anywhere (when it wasn't supposed to).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -573,7 +573,7 @@ See also %s.",
 302535920000364,Complete all wires and pipes instantly.,
 302535920000365,Complete Constructions,
 302535920000366,Complete all constructions instantly.,
-302535920000368,Open the mod editor.,
+302535920000368,Show a list of mods to load in the mod editor.,
 302535920000233,Cheats hover toggle,
 302535920000234,Cheats menu save position,
 302535920000238,"Are you sure you want to reset all research (includes breakthrough tech)?
@@ -1210,8 +1210,8 @@ Seems to fix it after a Sol or two, so you shouldn't need to leave this running.
 You may need to toggle the recall drones button (for certain issues).",
 302535920000939,"Fix certain freezing issues (mouse still moves screen, keyboard doesn't), will lower comfort by about 20.",
 302535920000055,Reset All Colonists,
-302535920000581,Toggle Collisions On Selected Object,
-302535920000582,Just in case you get something stuck somewhere.,
+302535920000581,Toggle Object Collision,
+302535920000582,Select an object and activate this to toggle collision (if you have a rover stuck in a dome).,
 302535920000583,Rebuild Walkable Points In Domes,
 302535920000584,"Useful? who knows, won't hurt.",
 302535920000585,Colonists Stuck Outside Rocket,
