--- a/Mods ChoGGi/Minimap/changes.txt
+++ b/Mods ChoGGi/Minimap/changes.txt
@@ -1,3 +1,6 @@
+v0.3
+Added Double Size and Reset Dialog buttons for fiddling with dialog.
+
 v0.2
 Takes a screenshot of the map the first time you open it.
 Only works decently for 16:9, there's a ModConfig option to use the topo images like v0.1.
