Mods: Forgot smaller blacklight.dds
ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Solar Array Follows Sun/changes.txt
+++ b/Mods ChoGGi/Solar Array Follows Sun/changes.txt
@@ -1,2 +1,5 @@
+v0.3
+Hopefully fixed issue with arrays not moving.
+
 v0.2
 Minor update to remove some spam in the log if you remove this mod and keep playing the save.
