Expanded Cheat Menu:
### Added:
- Debug>Attach Spots List: Shows list of attaches for use with .ent files.

### Changed:
- Removed the "mod_texture_" prefix when converting textures to entity files (ConvertImagesToResEntities).
- Renamed Object Spawner to Entity Spawner.

Example New Res Icons v0.2:
Added fallback backlight so it isn't dark zoomed out (thanks LukeH).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000235,,
-302535920001445,,
 302535920001446,,
 302535920001447,,
 302535920001448,,
@@ -10,6 +8,8 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920000235,Attach Spots List,
+302535920001445,Shows list of attach spots for use with .ent files.,
 302535920001432,%s %s 3D,
 302535920001433,Fiddle with object angle/axis/pos and so forth.,
 302535920000093,Go to Obj,
@@ -505,7 +505,7 @@ Works on any building that produces.",
 302535920000218,No Chance Of Break,
 302535920000219,will never break.,
 302535920000221,are built instantly.,
-302535920000223,Unlimited wonder build limit.,
+302535920000223,"Unlimited wonder build limit (blocks the ""build a wonder"" achievement).",
 302535920000224,Show Hidden Buildings,
 302535920000225,Show hidden buildings in build menu.,
 302535920000226,Remove Spire Point Limit,
@@ -967,7 +967,7 @@ Use Shift + Arrow keys to change the height/radius.",
 302535920000469,Close Dialogs,
 302535920000470,"Close any dialogs opened by ECM (Examine, ObjectManipulator, Change Colours, etc...).",
 302535920000472,Manipulate objects (selected or under mouse cursor),
-302535920000475,Object Spawner,
+302535920000475,Entity Spawner,
 302535920000476,"Shows list of objects, and spawns at mouse cursor.",
 302535920000478,Clears console history display.,
 302535920000479,Toggle Editor,
