Expanded Cheat Menu:
### Added:
- Debug>Object Flags: Shows list of flags set for selected object (also added to Examine>Tools).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001446,,
-302535920001447,,
 302535920001448,,
 302535920001449,,
 302535920001450,,
@@ -8,6 +6,8 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001446,Object Flags,
+302535920001447,Shows list of flags set for selected object.,
 302535920000235,Attach Spots List,
 302535920001445,Shows list of attach spots for use with .ent files.,
 302535920001432,%s %s 3D,
@@ -79,7 +79,7 @@ ID,Text,Translation,Old Translation,Gender
 If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""To import your old settings"".",
 302535920001411,ECM has been disabled. Change DisableECM to false in settings file.,
 302535920001383,AddXTemplate borked template name: %s template: %s list: %s,
-302535920000013,This shouldn't happen... Well shit something's bork bork bork.,
+302535920000013,This shouldn't happen... Well dang something's bork bork bork.,
 302535920000002,Dumped: %s,
 302535920000003,Can't dump nothing,
 302535920000041,Add new entry to %s (Defaults to name/value of selected item).,
