Expanded Cheat Menu:
### Added:
- Debug>Material Properties: Shows list of material settings for use with .mtl files.

### Changed:
- Moved Export CSV from Debug to Game, and added a new export option for graph data.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,11 +1,51 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001448,,
-302535920001449,,
-302535920001450,,
+302535920001460,,
+302535920001461,,
+302535920001462,,
+302535920001463,,
+302535920001464,,
+302535920001465,,
+302535920001466,,
+302535920001467,,
+302535920001468,,
+302535920001469,,
+302535920001470,,
+302535920001471,,
+302535920001472,,
+302535920001473,,
+302535920001474,,
+302535920001475,,
+302535920001476,,
+302535920001477,,
+302535920001478,,
+302535920001479,,
+302535920001480,,
+302535920001481,,
+302535920001482,,
+302535920001483,,
+302535920001484,,
+302535920001485,,
+302535920001486,,
+302535920001487,,
+302535920001488,,
+302535920001489,,
+302535920001490,,
+302535920001491,,
+302535920001492,,
+302535920001493,,
+302535920001494,,
+302535920001495,,
+302535920001496,,
+302535920001497,,
+302535920001498,,
+302535920001499,,
+302535920001500,,
+302535920001501,,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920000971,Sites,
 302535920001446,Object Flags,
 302535920001447,Shows list of flags set for selected object.,
 302535920000235,Attach Spots List,
@@ -880,6 +920,8 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001458,Material Properties,
+302535920001459,Shows list of material settings for use with .mtl files.,
 302535920001421,Shows a list of particles you can use on the selected obj.,
 302535920001417,Follow Mouse Grid Size,
 302535920001418,Sets the size of the grid...,
@@ -944,8 +986,6 @@ See the examine list for ids.",
 302535920000879,"Doesn't add the little flags, just lines and spheres (good for larger maps).",
 302535920000454,Fires some commands to reload lua files (use OnMsg.ReloadLua() to listen for it).,
 302535920000874,(see Path Markers to mark more than one at a time).,
-302535920001208,Export Colonist Data to CSV,
-302535920001219,Exports data about colonists to %sColonists.csv,
 302535920001176,Toggle showing FX debug info in console.,
 302535920001184,Particles,
 302535920000485,Terrain Flatten Toggle,
@@ -1193,7 +1233,6 @@ Mechanized: 1,000,000",
 302535920000248,Colonists Stuck Outside Service Buildings,
 302535920000464,Updating Rovers,
 302535920000964,Rover Infinite Loop,
-302535920000971,Sites,
 302535920001268,"RC Transports on a route have a certain tendency to get stuck and bog the game down (high speed feels like normal speed).
 
 This'll check for and stop any borked ones (it'll show a popup msg when it stops one).",
@@ -1263,6 +1302,17 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920001454,Stockpiled,
+302535920001455,Produced,
+302535920001456,Consumed,
+302535920001457,Stored,
+302535920001453,Completed,
+302535920001208,Colonist Data,
+302535920001219,Export colonist data to %sColonists.csv,
+302535920001449,Export,
+302535920001450,Graphs Data,
+302535920001452,Export data to %sGraphs.csv,
+302535920001448,CSV,
 302535920000862,Object Planner,
 302535920000863,Places fake construction site objects at mouse cursor (collision disabled).,
 302535920001375,Bird's Eye,
