Expanded Cheat Menu:
Code cleanup.

### Added:
- Debug>Material Properties: Shows list of material settings/.dds files for use with .mtl files.
### Changed:
- Examine:
- > Moved a bunch of the object funcs from the Tools to the Object menu.
- > Move the props toolbar buttons to the Object Menu.
### Fixed:
- Trying to examine DroneResourceUnits failed miserably.

Lib:
- the bottom entry in list dialog was never filtered.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -165,7 +165,7 @@ You can copy and paste numbers if you want.",
 302535920000028,Find Resource,
 302535920000029,Error: Cannot find any %s.,
 302535920000032,Select a resource to find,
-302535920001441,"<left_click> Activate, <right_click> Add/Remove Quickbar",
+302535920001441,<left_click> Activate <right_click> Add/Remove Quickbar,
 302535920001439,"~obj, @func,@@type,$id, *r/*g/*m threads",
 302535920001440,"~obj opens object in examine dialog.
 ~!obj opens an objlist of attachments for object in examine.
@@ -273,8 +273,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000477,Clear out the windowed console log.,
 302535920001442,EnumVars,
 302535920001443,View output from EnumVars(obj).,
-302535920001424,"<left_click> Next, <right_click> Previous, <middle_click> Top",
-302535920001425,"<left_click> Toggle, <right_click> Set Delay",
+302535920001424,<left_click> Next <right_click> Previous <middle_click> Top,
+302535920001425,<left_click> Toggle <right_click> Set Delay,
 302535920001426,Various tools to use.,
 302535920001422,Right-click to change refresh delay.,
 302535920000967,Delay in ms between updating text.,
@@ -350,7 +350,7 @@ Press Ctrl-Enter or Shift-Enter to execute code.",
 302535920000073,Execute code in text box (Ctrl-Enter or Shift-Enter will also work).,
 302535920000075,Insert Obj,
 302535920000076,At caret position inserts: ChoGGi.CurObj,
-302535920001444,"<left_click> Activate, <right_click> Alt Activate",
+302535920001444,<left_click> Activate <right_click> Alt Activate,
 302535920001371,"Double-click to apply and close list, double right-click to apply without closing list.",
 302535920001341,Double-click to apply without closing list.,
 302535920001167,Use Ctrl/Shift for multiple selection.,
@@ -921,7 +921,7 @@ Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
 302535920001458,Material Properties,
-302535920001459,Shows list of material settings for use with .mtl files.,
+302535920001459,Shows list of material settings/.dds files for use with .mtl files.,
 302535920001421,Shows a list of particles you can use on the selected obj.,
 302535920001417,Follow Mouse Grid Size,
 302535920001418,Sets the size of the grid...,
