Expanded Cheat Menu:
### Added:
- Mission>Rival Colonies: Add/remove rival colonies.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001460,,
-302535920001461,,
-302535920001462,,
+302535920000039,,
 302535920001463,,
 302535920001464,,
 302535920001465,,
@@ -86,7 +84,6 @@ ID,Text,Translation,Old Translation,Gender
 302535920000035,Grids,
 302535920000036,Disabled,
 302535920000038,Pick a checkbox next time...,
-302535920000039,Don't pick both checkboxes next time...,
 302535920000042,City,
 302535920000074,Cancel without changing anything.,
 302535920000084,Auto-Refresh,
@@ -1311,7 +1308,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920001219,Export colonist data to %sColonists.csv,
 302535920001449,Export,
 302535920001450,Graphs Data,
-302535920001452,Export data to %sGraphs.csv,
+302535920001452,Export graph data to %sGraphs.csv,
 302535920001448,CSV,
 302535920000862,Object Planner,
 302535920000863,Places fake construction site objects at mouse cursor (collision disabled).,
@@ -1628,6 +1625,9 @@ AddMaintenancePnts, MakeSphereTarget, SpawnWorker, SpawnVisitor",
 302535920000701,Queue up to 100 squares.,
 302535920000702,Game Speed,
 302535920000703,"Change the game speed (only for medium/fast, normal is normal).",
+302535920001460,Add/remove rival colonies.,
+302535920001461,* means it's an active rival you can remove.,
+302535920001462,%s rival colonies.,
 302535920001247,Start Challenge,
 302535920001249,Shows a list of challenges you can start (replaces current).,
 302535920001415,Sols to Complete: %s,
