Expanded Cheat Menu:
Cleaned up bug report msg.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1452,9 +1452,10 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
-302535920000039,Spam in the console log doesn't necessarily mean a problem with SM (it could just a warning).,
+302535920000039,"Spam in the console log doesn't necessarily mean a problem with SM (it could just a warning).
+This report will go to the %s developers not me.",
 302535920001463,Bug Report,
-302535920001464,Yes, I know what I'm doing. this is a bug.,
+302535920001464,Yes, I know what I'm doing. This is a bug.,
 302535920001427,Pack Mod,
 302535920001428,Uploads as a packed mod (default for mod editor upload).,
 302535920001412,GUI Dock Side,
